--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <meta property="og:title" content="Velto - The NASDAQ for Private AI" />
     <meta property="og:description" content="Trade tokenized stocks of pre-IPO private startups with long/short positions" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://velto-xyz.pages.dev" />
+    <meta property="og:image" content="https://velto-xyz.pages.dev/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@velto_xyz" />
+    <meta name="twitter:image" content="https://velto-xyz.pages.dev/og-image.png" />
   </head>
 
   <body>
